8237963: Shenandoah: Heap iteration should use concurrent version of string dedup roots

Reviewed-by: shade