src/hotspot/share/gc/shenandoah/shenandoahRootProcessor.hpp
@@ -266,7 +266,7 @@ private:
                                                            _cld_roots;
   ShenandoahSerialWeakRoots                                _serial_weak_roots;
   ShenandoahWeakRoots<false /*concurrent*/>                _weak_roots;
-  ShenandoahStringDedupRoots                               _dedup_roots;
+  ShenandoahConcurrentStringDedupRoots                     _dedup_roots;
   ShenandoahCodeCacheRoots<ShenandoahAllCodeRootsIterator> _code_roots;
 
 public:
